Bug 1377260 - Entries API must return results also when the underlying files of a directory change, r=smaug